kubernetes/pwck8s-backend/x509-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x509-proxy
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    pwck8s.io/app: x509-proxy
    pwck8s.io/component: proxy
