kubernetes/pwck8s-backend/x509-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pwck8s-backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: pwck8s.lootbot.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: x509-proxy
            port:
              number: 8443
